force-app/main/default/objects/GRV_Models__c/GRV_Models__c.object-meta.xml
<CustomObject>
    <label>GRV_Models</label>
    <nameField>
        <label>GRV_Models Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRVModels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>