force-app/main/default/objects/GRV_Models__c/fields/BrinnelHardnessExam__c.field-meta.xml
<CustomField>
    <fullName>BrinnelHardnessExam__c</fullName>
    <label>BrinnelHardnessExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>