force-app/main/default/objects/GRV_Models__c/fields/EngCategory__c.field-meta.xml
<CustomField>
    <fullName>EngCategory__c</fullName>
    <label>EngCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>