force-app/main/default/objects/GRV_Models__c/fields/FilWeldLiqDyePenExam__c.field-meta.xml
<CustomField>
    <fullName>FilWeldLiqDyePenExam__c</fullName>
    <label>FilWeldLiqDyePenExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>