force-app/main/default/objects/GRV_Models__c/fields/LiqDyePenExam__c.field-meta.xml
<CustomField>
    <fullName>LiqDyePenExam__c</fullName>
    <label>LiqDyePenExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>