force-app/main/default/objects/GRV_Models__c/fields/MagParticleExam__c.field-meta.xml
<CustomField>
    <fullName>MagParticleExam__c</fullName>
    <label>MagParticleExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>