force-app/main/default/objects/GRV_Models__c/fields/OA01A__c.field-meta.xml
<CustomField>
    <fullName>OA01A__c</fullName>
    <label>OA01A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>