force-app/main/default/objects/GRV_Models__c/fields/PosLoad__c.field-meta.xml
<CustomField>
    <fullName>PosLoad__c</fullName>
    <label>PosLoad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>