force-app/main/default/objects/GRV_Models__c/fields/UltrasonicExam__c.field-meta.xml
<CustomField>
    <fullName>UltrasonicExam__c</fullName>
    <label>UltrasonicExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>