force-app/main/default/objects/GRV_Models__c/fields/VacFullOP__c.field-meta.xml
<CustomField>
    <fullName>VacFullOP__c</fullName>
    <label>VacFullOP</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>