force-app/main/default/objects/GRV_Models__c/fields/VacMinOP__c.field-meta.xml
<CustomField>
    <fullName>VacMinOP__c</fullName>
    <label>VacMinOP</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>