force-app/main/default/objects/GRV_Models__c/fields/VisualCastingExam__c.field-meta.xml
<CustomField>
    <fullName>VisualCastingExam__c</fullName>
    <label>VisualCastingExam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>