force-app/main/default/objects/GRV_Models__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASYTYP__c</columns>
    <columns>ATEX__c</columns>
    <columns>BrinnelHardnessExam__c</columns>
    <columns>CUTR__c</columns>
    <columns>EngCategory__c</columns>
    <columns>FASubModel__c</columns>
    <columns>NACE__c</columns>
    <columns>PED__c</columns>
    <columns>PosCMethod__c</columns>
    <columns>PosFullOP__c</columns>
    <columns>PosIntMethod__c</columns>
    <columns>PosLoad__c</columns>
    <columns>PosMinOP__c</columns>
    <columns>PTC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>